# 3dModelGen

./: .vercelignore  README.md  WEB_APP_SUMMARY.md  WEB_SETUP_GUIDE.md  pyproject.toml  vercel.json
android/: README.md
android/bridge/: EngineRunner.kt  (+2 more)
api/: .gitignore  build.sh  index.py  requirements.txt  vercel_build.sh
backend/: .gitignore  README.md  main.py  requirements.txt
engine/: README.md  pyproject.toml
engine/engine/: __init__.py  config.py  pipeline.py  registry.py
engine/engine/implementations/python/: __init__.py  engine.py
engine/engine/implementations/python/camera/: poses.py
engine/engine/implementations/python/export/: glb.py
engine/engine/implementations/python/mesh/: repair.py
engine/engine/implementations/python/optimization/: decimate.py
engine/engine/implementations/python/preprocessing/: background.py  normalize.py
engine/engine/implementations/python/reconstruction/: photogrammetry.py  visual_hull.py
engine/engine/implementations/python/texturing/: vertex_colors.py
engine/engine/implementations/python/validation/: quality.py
engine/engine/interfaces/: __init__.py  engine.py
engine/engine/models/: __init__.py  types.py
engine/engine/utils/: session.py
engine/reconstruction_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mobile/: App.tsx  BUILD_COMMANDS.md  README.md  app.json  package-lock.json  package.json
shared/: README.md
web/: .eslintrc.cjs  QUICKSTART.md  README.md  WEBPACK_MIGRATION.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
(+75 files in other folders)
