[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "3dmodelgen"
version = "0.1.0"
description = "3D Model Generation from Photos - Full Stack Application"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "Pillow>=10.2",
    "trimesh>=4.3",
    "scikit-image>=0.22",
    "fast-simplification>=0.1.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "api*"]
